# core

./: .bzrignore  .travis.yml  AUTHORS  COPYRIGHT  Do.mds  Do.sln  Do.userprefs  HACKING  Makefile.am  Makefile.common  Makefile.include  Packages.mdse  README.md  autogen.sh  build.rules.mk  configure.ac
Do/: Do.csproj  Do.exe.config.in  Do.mdp  Do.pidb  Makefile.am  gnome-do.desktop  gnome-do.desktop.in  gnome-do.in
Do.Addins/: AssemblyInfo.cs  AssemblyInfo.cs.in  Do.Addins.addin.xml  Do.Addins.mdp  Do.Addins.pidb  Makefile.am  do.addins.pc.in
Do.Addins/Resources/: Do.Addins.addin.xml
Do.Addins/gtk-gui/: Do.Addins.AbstractLoginWidget.cs  Do.UI.AbstractLoginWidget.cs  gui.stetic  objects.xml
Do.Addins/src/: Paths.cs
Do.Addins/src/Do.Addins/: CairoUtils.cs  ContactItemStore.cs  IConfigurable.cs  IDoController.cs  IPreferences.cs  IStatistics.cs  Log.cs  LogBridge.cs  PixbufSurfaceCache.cs  SearchContext.cs  SearchFinishState.cs  Util.cs
Do.Addins/src/Do.Music/: BrowseMusicItems.cs  Configuration.cs  ControlActionActions.cs  ControlActionSource.cs  DefaultingActions.cs  DoMusic.cs  (+8 more)
Do.DBus/: Do.DBus.mdp  Makefile.am  do.dbus.pc.in
Do.DBus/src/: AssemblyInfo.cs.in  DBusRegistrar.cs  ICommander.cs  IController.cs  PowerState.cs
Do.Interface.Linux/: AssemblyInfo.cs  Do.Interface.Linux.csproj  Do.Interface.Linux.mdp  Do.Interface.Linux.pidb  Makefile.am  do.interface.linux.pc.in
Do.Interface.Linux.AnimationBase/: AssemblyInfo.cs  Do.Interface.Linux.AnimationBase.csproj  Do.Interface.Linux.AnimationBase.mdp  Makefile.am  do.interface.linux.animationbase.pc.in
Do.Interface.Linux.AnimationBase/Resources/: Do.Interface.Linux.AnimationBase.addin.xml
Do.Interface.Linux.AnimationBase/gtk-gui/: Do.Interface.AnimationBase.AnimationBaseConfigurationWidget.cs  gui.stetic
Do.Interface.Linux.Classic/: AssemblyInfo.cs  Do.Interface.Linux.Classic.csproj  Do.Interface.Linux.Classic.mdp  Makefile.am
Do.Interface.Linux.Classic/Resources/: Do.Interface.Linux.Classic.addin.xml
Do.Interface.Linux.Classic/src/: ClassicRenderer.cs  ClassicTheme.cs
Do.Interface.Linux.Docky/: AssemblyInfo.cs  AssemblyInfo.cs.in  Do.Interface.Linux.Docky.dll.config  Do.Interface.Linux.Docky.mdp  Makefile.am  do.interface.linux.docky.pc.in
Do.Interface.Linux.Docky/Resources/: Do.Interface.Linux.Docky.addin.xml
Do.Interface.Linux.Docky/gtk-gui/: Docky.DockyConfigurationWidget.cs  Docky.Interface.DockyConfigurationWidget.cs  gui.stetic
Do.Interface.Linux.GlassFrame/: AssemblyInfo.cs  Do.Interface.Linux.GlassFrame.csproj  Do.Interface.Linux.GlassFrame.mdp  Makefile.am
Do.Interface.Linux.GlassFrame/Resources/: Do.Interface.Linux.GlassFrame.addin.xml
Do.Interface.Linux.GlassFrame/src/: GlassFrameRenderer.cs  GlassFrameTheme.cs
Do.Interface.Linux.HUD/: AssemblyInfo.cs  Do.Interface.Linux.HUD.csproj  Do.Interface.Linux.HUD.mdp  Makefile.am
Do.Interface.Linux.HUD/Resources/: Do.Interface.Linux.HUD.addin.xml
Do.Interface.Linux.HUD/src/: HUDRenderer.cs  HUDTheme.cs
Do.Interface.Linux.Mini/: AssemblyInfo.cs  Do.Interface.Linux.Mini.csproj  Do.Interface.Linux.Mini.mdp  Makefile.am
Do.Interface.Linux.Mini/Resources/: Do.Interface.Linux.Mini.addin.xml
Do.Interface.Linux.Mini/src/: MiniRenderer.cs  MiniTheme.cs
Do.Interface.Linux/Resources/: Do.Interface.Linux.addin.xml
Do.Interface.Linux/src/: AssemblyInfo.cs  AssemblyInfo.cs.in
Do.Interface.Wink/: Do.Interface.Wink.dll.config  Do.Interface.Wink.mdp  Makefile.am  do.interface.wink.pc.in
Do.Interface.Wink/src/: AssemblyInfo.cs  AssemblyInfo.cs.in
Do.Platform/: Do.Platform.csproj  Do.Platform.mdp  Do.Platform.pidb  Makefile.am  do.platform.pc.in
Do.Platform.Linux/: Do.Platform.Linux.csproj  Do.Platform.Linux.dll.config.in  Do.Platform.Linux.mdp  Do.Platform.Linux.pidb  Makefile.am  Makefile.in  do.platform.linux.pc.in
Do.Platform.Linux.JoliCloud/: Do.Platform.Linux.JoliCloud.csproj  Do.Platform.Linux.JoliCloud.mdp  Makefile.am  Makefile.in  do.platform.linux.jolicloud.pc.in
Do.Platform.Linux.JoliCloud/Resources/: Do.Platform.Linux.JoliCloud.addin.xml
Do.Platform.Linux.JoliCloud/src/: AssemblyInfo.cs.in
Do.Platform.Linux/Resources/: Do.Platform.Linux.addin.xml
Do.Platform.Linux/gtk-gui/: Do.Platform.Linux.AbstractLoginWidget.cs  Do.Platform.Linux.PluginAvailableDialog.cs  gui.stetic
Do.Platform.Linux/src/: AssemblyInfo.cs  AssemblyInfo.cs.in
Do.Platform/Resources/: Do.Platform.addin.xml
Do.Platform/src/: AssemblyInfo.cs  AssemblyInfo.cs.in  EnumerableExtensions.cs  SecurePreferencesWrapper.cs
Do.Universe/: Do.Universe.csproj  Do.Universe.mdp  Makefile.am  do.universe.pc.in
Do.Universe/Resources/: Do.Universe.addin.xml
Do.Universe/src/: AssemblyInfo.cs  AssemblyInfo.cs.in
Do/Resources/: Do.addin.xml  Shelf.addin.xml
Do/gtk-gui/: Do.AppearanceConfigurationWidget.cs  Do.KeybindingsPreferencesWidget.cs  Do.UI.ColorConfigurationWidget.cs  Do.UI.DoAddinInstallerDialog.cs  Do.UI.GeneralPreferencesWidget.cs  Do.UI.HUDConfigurationWidget.cs  Do.UI.KeybindingsPreferencesWidget.cs  Do.UI.ManagePluginsPreferencesWidget.cs  Do.UI.PluginConfigurationWindow.cs  Do.UI.PluginErrorDialog.cs  Do.UI.PreferencesWindow.cs  Do.UI.SettingsWindow.cs  gui.stetic  objects.xml
Do/src/: AssemblyInfo.cs  AssemblyInfo.cs.in  CommandLinePreferences.cs  CommandLinePreferencesBackend.cs  CoreKeybindings.cs  CorePreferences.cs  DefaultCommander.cs  Do.cs  DoMain.cs  DoOptions.cs  DoPreferences.cs  Enumerable.cs  EnumerableExtensions.cs  GconfPreferencesBackend.cs  IPreferencesBackend.cs  Log.cs  Main.cs  Notifications.cs  PathExtensions.cs  Preferences.cs  ProgramVersion.cs  TrayLib.cs  Util.cs  XKeybinder.cs
Tests/: AssemblyInfo.cs.in  Makefile.am  TestItemSource.cs  TestKeybindingService.cs  TestLogging.cs  Tests.addin.xml  Tests.csproj  Tests.mdp
Tests/Do.Core.Tests/: DoActionTests.cs  DoItemTests.cs  DoObjectTests.cs  RelevanceProviderTests.cs  UniverseTests.cs
data/: Makefile.am  gnome-do.desktop.in  gnome-do.schemas.in
data/Docky.DefaultClockTheme/: Makefile.am
libdo/: Makefile.am  eggaccelerators.c  keybinder.c  keybinder.h
(+816 files in other folders)
